# libmicrodns

./: .gitignore  CMakeLists.txt
src/: config.h.in
